--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     testCompile 'junit:junit:[4.0,)'
     testCompile 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
+    
+    runtime 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
 }
 
 apply from: '../opencadc.gradle'
