--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
+    id 'war'
 }
 
 repositories {
@@ -15,14 +16,22 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.1'
+version = '1000'
+
+war {
+    archiveName = project.name + '##' + project.version + '.war'
+}
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.1,)'
-    compile 'org.opencadc:cadc-gms:[1.0,)'
+    compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
+    compile 'org.opencadc:cadc-vosi:[1.3,)'
+
+    runtime 'org.opencadc:cadc-log:[1.1,)'
 
     testCompile 'junit:junit:[4.0,)'
 }
 
 apply from: '../opencadc.gradle'
+
