--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 1.8
 
 group = 'org.opencadc'
@@ -27,14 +29,17 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[0.1,)'
     compile 'org.opencadc:cadc-inventory-db:[0.1,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.1,)'
+    compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
     compile 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
     compile 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
     testCompile 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
     
+    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.2,)'
+    
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
 }
 
-apply from: '../opencadc.gradle'
+
 
