--- a/minoc/Dockerfile
+++ b/minoc/Dockerfile
@@ -6,6 +6,6 @@ FROM cadc-tomcat:latest
 RUN ln -s /conf /root/config
 
 RUN rm -rf /usr/share/tomcat/webapps/*
-COPY build/libs/*.war /usr/share/tomcat/webapps
+COPY build/libs/minoc.war /usr/share/tomcat/webapps
 
 EXPOSE 8080
