update storage-inventory-dm README with implementation/behaviour details fix put luskan.war into image

--- a/luskan/Dockerfile
+++ b/luskan/Dockerfile
@@ -1,4 +1,4 @@
 FROM cadc-tomcat:latest
 
 RUN ln -s /conf /root/config
-COPY build/libs/*.war /usr/share/tomcat/webapps
+COPY build/libs/luskan.war /usr/share/tomcat/webapps
