--- a/raven/src/main/webapp/service.yaml
+++ b/raven/src/main/webapp/service.yaml
@@ -1,9 +1,9 @@
 swagger: '2.0'
 info:
   version: '0.1'
-  title: Artifact locate service (juni)
+  title: Artifact locate service (raven)
   description: 'A programmatic interface for determining the storage locations of an artifact.  Artifacts may be available at multiple storage sites.  Querying for the location of an artifact will result in a list of zero or more pre-authorized URLs that can be used for downloading the artifact.  For non-public artifacts, credentials must be supplied to gain authorization.  <br/><br/>Clients may authenticate to this service in one of two ways:<br/>1.  By providing a cookie in the Cookie header<br/>2.  By using a client certificate over SSL.'
-basePath: '/juni'
+basePath: '/raven'
 
 paths:
   '/locate':
