--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,15 +34,25 @@ jobs:
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
 
+    - name: java build -- baldur
+      run: test -d baldur && (cd baldur && gradle --info clean build javadoc checkstyleMain) || echo "not found"
+
     - name: java build -- minoc 
       run: cd minoc && gradle --info clean build javadoc checkstyleMain
       
     - name: java build -- luskan
       run: test -d luskan && (cd luskan && gradle --info clean build javadoc checkstyleMain) || echo "not found"
+      
+    - name: java build -- raven
+      run: test -d raven && (cd raven && gradle --info clean build javadoc checkstyleMain) || echo "not found"
 
 ## TODO: docker build depends on cadc-tomcat base image from docker-base.git
+#    - name: docker build -- baldur
+#      run: cd baldur && docker build . --file Dockerfile --tag luskan:$(date +%s)
 #    - name: docker build -- minoc
 #      run: cd minoc && docker build . --file Dockerfile --tag minoc:$(date +%s)
 #    - name: docker build -- luskan
-#      run: test -d luskan && (cd luskan && docker build . --file Dockerfile --tag luskan:$(date +%s)) || echo "not found"
+#      run: cd luskan && docker build . --file Dockerfile --tag luskan:$(date +%s)
+#    - name: docker build -- raven
+#      run: cd raven && docker build . --file Dockerfile --tag luskan:$(date +%s)
 
