--- a/raven/build.gradle
+++ b/raven/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     compile 'org.opencadc:cadc-inventory-db:[0.1,)'
     compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
     compile 'org.opencadc:cadc-vos:[1.1.8,)'
-    compile 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
-    compile 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
+    
+    runtime 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
+    runtime 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 
