--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[0.1,)'
     compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
     compile 'org.opencadc:cadc-vosi:[1.3,)'
+    compile 'org.opencadc:cadc-rest:[1.2.1,2.0)'
 
     runtime 'org.opencadc:cadc-log:[1.1,)'
 
