--- a/cadc-storage-permissions/build.gradle
+++ b/cadc-storage-permissions/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.1,)'
     compile 'org.opencadc:cadc-gms:[1.0,)'
+    compile 'org.opencadc:cadc-rest:[1.2.1,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 }
