--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,20 +31,23 @@ jobs:
     - name: build and test cadc-storage-adapter-fs
       run: cd cadc-storage-adapter-fs && gradle --info clean build javadoc checkstyleMain install
       
+    - name: build and test cadc-storage-adapter-ceph
+      run: cd cadc-storage-adapter-ceph && gradle --info clean build javadoc checkstyleMain install
+      
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
 
     - name: java build -- baldur
-      run: test -d baldur && (cd baldur && gradle --info clean build javadoc checkstyleMain) || echo "not found"
+      run: cd baldur && gradle --info clean build javadoc checkstyleMain
 
     - name: java build -- minoc 
       run: cd minoc && gradle --info clean build javadoc checkstyleMain
       
     - name: java build -- luskan
-      run: test -d luskan && (cd luskan && gradle --info clean build javadoc checkstyleMain) || echo "not found"
+      run: cd luskan && gradle --info clean build javadoc checkstyleMain
       
     - name: java build -- raven
-      run: test -d raven && (cd raven && gradle --info clean build javadoc checkstyleMain) || echo "not found"
+      run: cd raven && gradle --info clean build javadoc checkstyleMain
 
 ## TODO: docker build depends on cadc-tomcat base image from docker-base.git
 #    - name: docker build -- baldur
