rework and int-tests on baldur

--- a/baldur/Dockerfile
+++ b/baldur/Dockerfile
@@ -3,6 +3,4 @@
 
 FROM cadc-tomcat:latest
 
-RUN rm -rf /usr/share/tomcat/webapps/*
-
-COPY build/libs/*.war /usr/share/tomcat/webapps
+COPY build/libs/baldur.war /usr/share/tomcat/webapps
