--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,9 @@ jobs:
       
     - name: build and test cadc-storage-adapter-fs
       run: cd cadc-storage-adapter-fs && gradle --info clean build javadoc checkstyleMain install
+
+    - name: build and test cadc-storage-adapter-ceph
+      run: cd cadc-storage-adapter-ceph && gradle --info clean build javadoc checkstyleMain install
       
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
