--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,7 +32,7 @@ jobs:
       run: cd cadc-storage-adapter-fs && gradle --info clean build javadoc checkstyleMain install
       
     - name: build and test cadc-storage-adapter-ceph
-      run: cd cadc-storage-adapter-ceph && gradle --info clean build javadoc checkstyleMain install
+      run: test -d cadc-storage-adapter-ceph && cd cadc-storage-adapter-ceph && gradle --info clean build javadoc checkstyleMain install
       
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
