--- a/baldur/src/test/resources/testSingleEntry/baldur.properties
+++ b/baldur/src/test/resources/testSingleEntry/baldur.properties
@@ -1,3 +1,5 @@
+users = CN=test,OU=cadc,O=hia,C=ca
+
 entry = test ^cadc:TEST/.*
 test.anon = true
 test.readOnlyGroups = ivo://cadc.nrc.ca/gms?group1 ivo://cadc.nrc.ca/gms?group2
