--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -18,6 +18,12 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
+war {
+    from(System.getenv('RPS') + '/resources/') {
+        include 'swagger-ui/'
+    }
+}
+
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.1,)'
