--- a/cadc-inventory-db/build.gradle
+++ b/cadc-inventory-db/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
+    id 'application'
 }
 
 repositories {
@@ -19,11 +20,14 @@ group = 'org.opencadc'
 
 version = '0.6'
 
+mainClassName = 'org.opencadc.inventory.db.version.Main'
+
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.5,)'
 
     testCompile 'junit:junit:[4.0,)'
     
+    runtime 'org.postgresql:postgresql:[42.2.8,)'
     intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
 }
