--- a/cadc-storage-adapter-ad/build.gradle
+++ b/cadc-storage-adapter-ad/build.gradle
@@ -19,7 +19,8 @@ version = '0.1'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.2.31,)'
+    compile 'org.opencadc:cadc-util:[1.3.0,)'
+    compile 'org.opencadc:cadc-tap:[1.0.1,)'
     compile 'org.opencadc:cadc-inventory:[0.3,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.2,)'
     compile 'org.opencadc:cadc-registry:[1.0,)'
