--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -25,14 +25,14 @@ war {
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-util:[1.3.0,1.4.0)'
     compile 'org.opencadc:cadc-log:[1.0,)'
     compile 'org.opencadc:cadc-registry:[1.5.6,)'
     compile 'org.opencadc:cadc-vosi:[1.0,)'
     compile 'org.opencadc:cadc-rest:[1.0,)'
     compile 'org.opencadc:cadc-cdp:[1.0,)'
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
-    compile 'org.opencadc:cadc-inventory:[0.6,)'
+    compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-inventory-db:[0.6,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.2,)'
     compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
@@ -44,6 +44,7 @@ dependencies {
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.2,)'
     
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
+    runtime 'org.opencadc:cadc-storage-adapter-ad:[0.1,)'
 }
 
 
