--- a/cadc-storage-permissions/build.gradle
+++ b/cadc-storage-permissions/build.gradle
@@ -21,8 +21,11 @@ dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.1,)'
     compile 'org.opencadc:cadc-gms:[1.0,)'
+    compile 'org.opencadc:cadc-registry:[1.0,2.0)'
+    compile 'org.opencadc:cadc-util:[1.3.1,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
+    testCompile 'org.easymock:easymock:[3.6,4.0)'
 }
 
 apply from: '../opencadc.gradle'
