--- a/baldur/Dockerfile
+++ b/baldur/Dockerfile
@@ -3,4 +3,7 @@
 
 FROM cadc-tomcat:latest
 
+RUN ln -s /config /usr/share/tomcat/config
+
+RUN rm -rf /usr/share/tomcat/webapps/*
 COPY build/libs/baldur.war /usr/share/tomcat/webapps
