s2575, ta 13130: critwall reading in config.properties.

--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
 
     testCompile 'junit:junit:[4.12,5.0)'
+
+    compile 'org.opencadc:cadc-storage-adapter-ad:[0.1,)'
 }
 
 mainClassName = 'org.opencadc.critwall.Main'
