s2655 - code review rework

--- a/cadc-storage-permissions/src/intTest/resources/testPermissionsClient/baldur.properties
+++ b/cadc-storage-permissions/src/intTest/resources/testPermissionsClient/baldur.properties
@@ -1,4 +1,4 @@
-users = cn=cadcregtest1_b5d,ou=cadc,o=hia,c=ca
+users = cn=cadcauthtest1_24c,ou=cadc,o=hia,c=ca
 
 entry = TEST-GROUPS ^cadc:TEST-GROUPS/.*
 TEST-GROUPS.anon = true
