s2655 - added cadc-storage-permissions-client to minoc build.

--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory-db:[0.7,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.2,)'
     compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
+    compile 'org.opencadc:cadc-storage-permissions-client:[0.1,)'
     compile 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
     compile 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
 
