--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,6 +43,9 @@ jobs:
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
 
+    - name: build and test cadc-storage-permissions-client
+      run: cd cadc-storage-permissions-client && gradle --info clean build javadoc checkstyleMain install
+
     - name: java build -- baldur
       run: cd baldur && gradle --info clean build javadoc checkstyleMain
 
