--- a/raven/src/test/resources/raven.properties
+++ b/raven/src/test/resources/raven.properties
@@ -1,2 +1,5 @@
 org.opencadc.inventory.db.SQLGenerator=org.opencadc.inventory.db.SQLGenerator
 org.opencadc.inventory.db.schema=inventory
+
+# permission granting service settings
+org.opencadc.inventory.permissions.ReadGrant.serviceID=ivo://cadc.nrc.ca/baldur
