--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'
     compile 'org.jdom:jdom2:[2.0,)'
 
+    compile 'org.opencadc:cadc-util:[1.3.4,)'
     compile 'org.opencadc:cadc-adql:[1.1,)'
     compile 'org.opencadc:cadc-access-control:[1.1.1,)'
     compile 'org.opencadc:cadc-uws:[1.0.2,)'
@@ -36,9 +37,9 @@ dependencies {
     compile 'org.opencadc:cadc-tap-schema:[1.1.9,)'
     compile 'org.opencadc:cadc-tap-server-pg:[1.0.5,)'
 
-    runtime 'org.opencadc:cadc-registry:[1.4.6,)'
-    runtime 'org.opencadc:cadc-rest:[1.2.8,)'
-    runtime 'org.opencadc:cadc-vosi:[1.0,)'
+    runtime 'org.opencadc:cadc-registry:[1.5.8,)'
+    runtime 'org.opencadc:cadc-rest:[1.2.17,)'
+    runtime 'org.opencadc:cadc-vosi:[1.3.4,)'
 
     testCompile 'junit:junit:[4.0,)'
 
