fixed compile and runtime dependencies for GMS fixed check permission logic and error messages removed extraneous Subject.doAs in getUserGroups() added temporary disable group permission checks to support development; may make it an option for testing

--- a/minoc/src/main/webapp/WEB-INF/web.xml
+++ b/minoc/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,10 @@
             <param-value>false</param-value>
         </init-param>
         <init-param>
+            <param-name>init</param-name>
+            <param-value>org.opencadc.minoc.InitDatabaseAction</param-value>
+        </init-param>
+        <init-param>
             <param-name>get</param-name>
             <param-value>org.opencadc.minoc.GetAction</param-value>
         </init-param>
