--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[0.7,2.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.6,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
-    compile 'org.opencadc:cadc-storage-adapter-ad:[0.1,)'
+    compile 'org.opencadc:cadc-storage-adapter-fs:[0.5,)'
+    compile 'org.opencadc:cadc-vos:[1.1.8,)'
+    compile 'org.opencadc:cadc-vosi:[1.0,)'
 
     testCompile 'junit:junit:[4.12,5.0)'
 
