--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-inventory-db:[0.7,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.2,)'
-    compile 'org.opencadc:cadc-storage-permissions:[0.1,)'
-    compile 'org.opencadc:cadc-storage-permissions-client:[0.1,)'
+    compile 'org.opencadc:cadc-permissions:[0.1,)'
+    compile 'org.opencadc:cadc-permissions-client:[0.1,)'
     compile 'org.opencadc:cadc-gms:[1.0,)'
     
     testCompile 'junit:junit:[4.0,)'
