--- a/cadc-storage-adapter-ad/build.gradle
+++ b/cadc-storage-adapter-ad/build.gradle
@@ -15,11 +15,12 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.2'
+version = '0.2.1'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-util:[1.3.1,)'
+    compile 'org.opencadc:cadc-dali:[1.2.1,)'
     compile 'org.opencadc:cadc-tap:[1.0.1,)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.4,)'
