s2655 - int-test fixes, add 404 for get to service API

--- a/baldur/src/main/webapp/service.yaml
+++ b/baldur/src/main/webapp/service.yaml
@@ -39,6 +39,8 @@ paths:
           description: If the client does not provide credentials and anonymous access is disallowed.
         '403':
           description: If the client does not have permission.
+        '404':
+          description: If permissions are not found for the uri.
         '500':
           description: Internal error
         '503':
