s2655 - update baldur.properties key values and update README, update int-tests to properly use HttpGet.

--- a/baldur/src/test/resources/testDuplicatePermissions/baldur.properties
+++ b/baldur/src/test/resources/testDuplicatePermissions/baldur.properties
@@ -1,7 +1,7 @@
-expiryTime = 60
+org.opencadc.baldur.grantExpiry = 60
 
-users = CN=test,OU=cadc,O=hia,C=ca
+org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-entry = test .*TE.*
+org.opencadc.baldur.entry = test .*TE.*
 test.anon = false
 test.anon = false
