--- a/baldur/src/test/resources/testDuplicateEntries/baldur.properties
+++ b/baldur/src/test/resources/testDuplicateEntries/baldur.properties
@@ -1,8 +1,8 @@
-expiryTime = 60
+org.opencadc.baldur.grantExpiry = 60
 
-users = CN=test,OU=cadc,O=hia,C=ca
+org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-entry = test .*TE.*
+org.opencadc.baldur.entry = test .*TE.*
 test.anon = false
 
-entry = test .*ST.*
+org.opencadc.baldur.entry = test .*ST.*
