--- a/baldur/src/test/resources/testMultipleMatches/baldur.properties
+++ b/baldur/src/test/resources/testMultipleMatches/baldur.properties
@@ -1,9 +1,9 @@
-expiryTime = 60
+org.opencadc.baldur.grantExpiry = 60
 
-users = CN=test,OU=cadc,O=hia,C=ca
+org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-entry = test1 .*TE.*
+org.opencadc.baldur.entry = test1 .*TE.*
 test1.anon = false
 
-entry = test2 .*ST.*
+org.opencadc.baldur.entry = test2 .*ST.*
 test2.anon = true
