--- a/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
+++ b/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
@@ -1,13 +1,13 @@
-expiryTime = 60
+org.opencadc.baldur.grantExpiry = 60
 
-users = CN=test,OU=cadc,O=hia,C=ca
+org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-entry = test1 .*TE.*
+org.opencadc.baldur.entry = test1 .*TE.*
 test1.anon = false
 test1.readOnlyGroups = ivo://cadc.nrc.ca/gms?group1
 test1.readWriteGroups = ivo://cadc.nrc.ca/gms?group2
 
-entry = test2 .*ST.*
+org.opencadc.baldur.entry = test2 .*ST.*
 test2.anon = true
 test2.readOnlyGroups = ivo://cadc.nrc.ca/gms?group3
 test2.readWriteGroups = ivo://cadc.nrc.ca/gms?group4
