--- a/baldur/src/test/resources/testSingleEntry/baldur.properties
+++ b/baldur/src/test/resources/testSingleEntry/baldur.properties
@@ -1,8 +1,8 @@
-expiryTime = 60
+org.opencadc.baldur.grantExpiry = 60
 
-users = CN=test,OU=cadc,O=hia,C=ca
+org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-entry = test ^cadc:TEST/.*
+org.opencadc.baldur.entry = test ^cadc:TEST/.*
 test.anon = true
 test.readOnlyGroups = ivo://cadc.nrc.ca/gms?group1 ivo://cadc.nrc.ca/gms?group2
 test.readWriteGroups = ivo://cadc.nrc.ca/gms?group3 ivo://cadc.nrc.ca/gms?group4
