--- a/cadc-storage-adapter-ceph/build.gradle
+++ b/cadc-storage-adapter-ceph/build.gradle
@@ -22,7 +22,7 @@ apply from: '../opencadc.gradle'
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-util:[1.2.31,)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.4,)'
+    compile 'org.opencadc:cadc-storage-adapter:[0.6,)'
 
     // Java FITS library.
     compile 'gov.nasa.gsfc.heasarc:nom-tam-fits:[1,2)'
@@ -30,7 +30,14 @@ dependencies {
     // RADOS Java Library from Ceph
     //compile 'com.ceph:rados:0.6.0-SNAPSHOT'
 
-    // Amazon S3 Java Library
+    // swift API
+    //compile 'org.javaswift:joss:0.10.4-pdowler'
+    compile 'org.javaswift:joss:0.10.4'
+
+    runtime 'org.slf4j:slf4j-nop:[1.6,)'
+    //runtime 'org.slf4j:slf4j-log4j12:[1.6,2.0)'
+    
+    // Amazon S3 Java Library -- huge number of what look like server side dependencies
     compile 'software.amazon.awssdk:s3:2.10.49'
 
     testCompile 'junit:junit:[4.0,)'
