--- a/cadc-storage-adapter-ceph/build.gradle
+++ b/cadc-storage-adapter-ceph/build.gradle
@@ -15,14 +15,15 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.3'
+version = '0.4'
 
 apply from: '../opencadc.gradle'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.2.31,)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.6,)'
+    compile 'org.opencadc:cadc-util:[1.3.10,)'
+    compile 'org.opencadc:cadc-inventory:[0.7,)'
+    compile 'org.opencadc:cadc-storage-adapter:[0.7,)'
 
     // Java FITS library.
     compile 'gov.nasa.gsfc.heasarc:nom-tam-fits:[1,2)'
@@ -34,8 +35,8 @@ dependencies {
     //compile 'org.javaswift:joss:0.10.4-pdowler'
     compile 'org.javaswift:joss:0.10.4'
 
-    runtime 'org.slf4j:slf4j-nop:[1.6,)'
-    //runtime 'org.slf4j:slf4j-log4j12:[1.6,2.0)'
+    //runtime 'org.slf4j:slf4j-nop:[1.6,)'
+    runtime 'org.slf4j:slf4j-log4j12:[1.6,2.0)'
     
     // Amazon S3 Java Library -- huge number of what look like server side dependencies
     compile 'software.amazon.awssdk:s3:2.10.49'
