--- a/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
+++ b/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
@@ -4,10 +4,10 @@ org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
 org.opencadc.baldur.entry = test1 .*TE.*
 test1.anon = false
-test1.readOnlyGroups = ivo://cadc.nrc.ca/gms?group1
-test1.readWriteGroups = ivo://cadc.nrc.ca/gms?group2
+test1.readOnlyGroup = ivo://cadc.nrc.ca/gms?group1
+test1.readWriteGroup = ivo://cadc.nrc.ca/gms?group2
 
 org.opencadc.baldur.entry = test2 .*ST.*
 test2.anon = true
-test2.readOnlyGroups = ivo://cadc.nrc.ca/gms?group3
-test2.readWriteGroups = ivo://cadc.nrc.ca/gms?group4
+test2.readOnlyGroup = ivo://cadc.nrc.ca/gms?group3
+test2.readWriteGroup = ivo://cadc.nrc.ca/gms?group4
