--- a/baldur/src/test/resources/testSingleEntry/baldur.properties
+++ b/baldur/src/test/resources/testSingleEntry/baldur.properties
@@ -5,7 +5,7 @@ org.opencadc.baldur.allowedUser = CN=bar,OU=cadc,O=hia,C=ca
 
 org.opencadc.baldur.entry = test ^cadc:TEST/.*
 test.anon = true
-test.readOnlyGroups = ivo://cadc.nrc.ca/gms?group1
-test.readOnlyGroups = ivo://cadc.nrc.ca/gms?group2
-test.readWriteGroups = ivo://cadc.nrc.ca/gms?group3
-test.readWriteGroups = ivo://cadc.nrc.ca/gms?group4
+test.readOnlyGroup = ivo://cadc.nrc.ca/gms?group1
+test.readOnlyGroup = ivo://cadc.nrc.ca/gms?group2
+test.readWriteGroup = ivo://cadc.nrc.ca/gms?group3
+test.readWriteGroup = ivo://cadc.nrc.ca/gms?group4
