--- a/cadc-inventory-util/build.gradle
+++ b/cadc-inventory-util/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    compile 'org.opencadc:cadc-permissions:[0.2,)'
+    compile 'org.opencadc:cadc-permissions-client:[0.2,)'
 
     testCompile 'junit:junit:[4.0,)'
 }
