--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-inventory-db:[0.7,)'
+    compile 'org.opencadc:cadc-inventory-util:[0.1,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.2,)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
     compile 'org.opencadc:cadc-permissions-client:[0.2,)'
