--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -20,6 +20,6 @@ ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
 ca.nrc.cadc.tap.ResultStore = org.opencadc.luskan.TempStorageManager
 
-#ca.nrc.cadc.tap.schema.TapSchemaDAO =
+ca.nrc.cadc.tap.schema.TapSchemaDAO = org.opencadc.luskan.TapSchemaDAOImpl
 
 #ca.nrc.cadc.vosi.actions.DataSourceProvider =
