--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -13,13 +13,16 @@ repositories {
 
 sourceCompatibility = 1.8
 group = 'org.opencadc'
-version = '0.1.0'
+version = '0.1'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
+    compile 'org.opencadc:cadc-inventory-db:[0.9,)'
     compile 'org.opencadc:cadc-util:[1.2,)'
-    compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    compile 'org.opencadc:cadc-rest:[1.2.18,)'
+    compile 'org.opencadc:cadc-permissions:[0.2,)'
+    compile 'org.opencadc:cadc-permissions-client:[0.2,)'
 
     testCompile 'junit:junit:[4.0,)'
 }
