fix javadoc warning and runtime dependencies for modules that use cadc-storage-adapter impls

--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     runtime 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.1,)'
     runtime 'org.opencadc:cadc-storage-adapter-ad:[0.1,)'
+    runtime 'org.opencadc:cadc-storage-adapter-swift:[0.1,)'
 }
 
 
