--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -25,10 +25,11 @@ dependencies {
     compile 'org.opencadc:cadc-inventory-util:[0.1.0,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.3.6,2.0)'
-    compile 'org.opencadc:cadc-storage-adapter-fs:[0.6,)'
-    compile 'org.opencadc:cadc-storage-adapter-ceph:[0.4,)'
     compile 'org.opencadc:cadc-vos:[1.1.8,)'
 
+    runtime 'org.opencadc:cadc-storage-adapter-fs:[0.6,)'
+    runtime 'org.opencadc:cadc-storage-adapter-swift:[0.4,)'
+    
     testCompile 'junit:junit:[4.12,5.0)'
 }
 
