--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -10,11 +10,15 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
 version = '0.1'
+
+mainClassName = 'org.opencadc.critwall.Main'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
@@ -22,7 +26,7 @@ dependencies {
     compile 'org.opencadc:cadc-util:[1.3.4,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,2.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.9.1,1.0)'
-    compile 'org.opencadc:cadc-inventory-util:[0.1.0,1.0)'
+    compile 'org.opencadc:cadc-inventory-util:[0.1.1,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.3.6,2.0)'
     compile 'org.opencadc:cadc-vos:[1.1.8,)'
@@ -31,9 +35,5 @@ dependencies {
     runtime 'org.opencadc:cadc-storage-adapter-swift:[0.4,)'
     
     testCompile 'junit:junit:[4.12,5.0)'
+    intTestCompile 'org.opencadc:cadc-storage-adapter-fs:[0.6,)'
 }
-
-mainClassName = 'org.opencadc.critwall.Main'
-
-apply from: '../opencadc.gradle'
-
