changed service dockerfiles to depend on major version 1 of base containers added VERSION file to services with semantic version and timestamp tags

--- a/minoc/Dockerfile
+++ b/minoc/Dockerfile
@@ -1,7 +1,4 @@
-# No versioning in cadc-tomcat yet so just use 'latest' for now
-#FROM cadc-tomcat:0.1
-
-FROM cadc-tomcat:latest
+FROM cadc-tomcat:1
 
 COPY build/libs/minoc.war /usr/share/tomcat/webapps/
 
