changed application dockerfiles to depend on major version 1 of base containers added VERSION file to applications with semantic version and timestamp tags removed version from application build.gradle and dockerfile so semantic version is in one place only

--- a/critwall/Dockerfile
+++ b/critwall/Dockerfile
@@ -1,11 +1,8 @@
-FROM cadc-java
+FROM cadc-java:1
 
-ARG APP_VERSION=0.1
+COPY build/distributions/critwall.tar /
 
-COPY build/distributions/critwall-${APP_VERSION}.tar /
+RUN tar xvf critwall.tar \
+    && rm -f critwall.tar
 
-RUN tar xvf critwall-${APP_VERSION}.tar \
-    && cp -a critwall-${APP_VERSION}/* /usr/local/ \
-    && rm -rf critwall-${APP_VERSION}*
-
-CMD ["/usr/local/bin/critwall"]
+CMD ["/critwall/bin/critwall"]
