--- a/fenwick/Dockerfile
+++ b/fenwick/Dockerfile
@@ -1,11 +1,8 @@
-FROM cadc-java
+FROM cadc-java:1
 
-ARG APP_VERSION=0.1
+COPY build/distributions/fenwick.tar /
 
-COPY build/distributions/fenwick-${APP_VERSION}.tar /
+RUN tar xvf fenwick.tar \
+    && rm -rf fenwick.tar
 
-RUN tar xvf fenwick-${APP_VERSION}.tar \
-    && cp -a fenwick-${APP_VERSION}/* /usr/local/ \
-    && rm -rf fenwick-${APP_VERSION}*
-
-CMD ["/usr/local/bin/fenwick"]
+CMD ["/fenwick/bin/fenwick"]
