--- a/tantar/Dockerfile
+++ b/tantar/Dockerfile
@@ -1,11 +1,8 @@
-FROM cadc-java
+FROM cadc-java:1
 
-ARG APP_VERSION=0.1
+COPY build/distributions/tantar.tar /
 
-COPY build/distributions/tantar-${APP_VERSION}.tar /
+RUN tar xvf tantar.tar \
+    && rm -rf tantar.tar
 
-RUN tar xvf tantar-${APP_VERSION}.tar \
-    && cp -a tantar-${APP_VERSION}/* /usr/local/ \
-    && rm -rf tantar-${APP_VERSION}*
-
-CMD ["/usr/local/bin/tantar"]
+CMD ["/tantar/bin/tantar"]
