--- a/fenwick/build.gradle
+++ b/fenwick/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.3,1.0)'
     compile 'org.opencadc:cadc-util:[1.3.12,2.0)'
+    compile 'org.opencadc:cadc-log:[1.1.3,)'
     compile 'org.opencadc:cadc-inventory-db:[0.10,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
     compile 'org.opencadc:cadc-tap:[1.0.1,1.2)' // 1.2 upper bound is correct #reasons
