--- a/ratik/build.gradle
+++ b/ratik/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile 'org.opencadc:cadc-storage-adapter:[0.3,1.0)'
     compile 'org.opencadc:cadc-util:[1.3.12,2.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.10,1.0)'
+    compile 'org.opencadc:cadc-inventory-util:[0.1.0,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
     compile 'org.opencadc:cadc-tap:[1.0.1,1.2)' // 1.2 upper bound is correct #reasons
 
