--- a/cadc-inventory-util/build.gradle
+++ b/cadc-inventory-util/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.1.2'
+version = '0.1.3'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
@@ -25,6 +25,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-util:[1.2,)'
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    compile 'org.opencadc:cadc-tap:[1.0.1,1.2)' // 1.2 upper bound is correct #reasons
     
     testCompile 'junit:junit:[4.0,)'
     
