--- a/raven/src/main/webapp/service.yaml
+++ b/raven/src/main/webapp/service.yaml
@@ -3,10 +3,10 @@ info:
   version: '0.1'
   title: Artifact locate service (raven)
   description: 'A programmatic interface for determining the storage locations of an artifact.  Artifacts may be available at multiple storage sites.  Querying for the location of an artifact will result in a list of zero or more pre-authorized URLs that can be used for downloading the artifact.  For non-public artifacts, credentials must be supplied to gain authorization.  <br/><br/>Clients may authenticate to this service in one of two ways:<br/>1.  By providing a cookie in the Cookie header<br/>2.  By using a client certificate over SSL.'
-basePath: '/raven'
 
+basePath: /raven
 paths:
-  '/locate':
+  /locate:
     post:
       description: 'Find all the download locations of a given artifact by posting a transfer request and receiving a transfer response, with pre-authorized URLs, in return.'
       tags:
@@ -22,8 +22,6 @@ paths:
         - name: transfer-request
           in: body
           description: 'A transfer object (according to the VOSpace 2.1 specification) containing the target artifact (Artifact URI) and direction (only pullFromVoSpace supported).'
-          schema:
-            type: object
           required: true
       responses:
         '200':
@@ -38,7 +36,7 @@ paths:
           description: Internal error
         '503':
           description: Service busy
-  '/files/{artifact-uri}':
+  /files/{artifact-uri}:
     parameters:
       - name: artifact-uri
         in: path
