--- a/cadc-inventory-util/build.gradle
+++ b/cadc-inventory-util/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:[2.8.0,2.9.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-util:[1.2,)'
-    compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    //compile 'org.opencadc:cadc-gms:[1.0.0,)'
     
     testCompile 'junit:junit:[4.0,)'
     
