--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'war'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.5'
     id 'checkstyle'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
