--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -8,6 +8,8 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
+    //tmp to resolve uk.ac.starlink
+    jcenter()
 }
 
 apply from: '../opencadc.gradle'
