CADC-9182 Added minoc-availability.properties to web.xml needed to support setState(). At run time, a minoc-availability.properties file is required in ~/config/. to define the authorized users.

--- a/minoc/src/main/webapp/WEB-INF/web.xml
+++ b/minoc/src/main/webapp/WEB-INF/web.xml
@@ -98,6 +98,10 @@
             <param-name>ca.nrc.cadc.vosi.AvailabilityPlugin</param-name>
             <param-value>org.opencadc.minoc.ServiceAvailability</param-value>
         </init-param>
+        <init-param>
+            <param-name>availabilityProperties</param-name>
+            <param-value>minoc-availability.properties</param-value>
+        </init-param>
         <load-on-startup>4</load-on-startup>
     </servlet>
 
