--- a/cadc-inventory-util/build.gradle
+++ b/cadc-inventory-util/build.gradle
@@ -16,7 +16,7 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.1.2'
+version = '0.1.3'
 
 description = 'OpenCADC Storage Inventory client utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
@@ -26,6 +26,7 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:[2.8.0,2.9.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-tap:[1.0.1,1.2)'
     //compile 'org.opencadc:cadc-gms:[1.0.0,)'
     
     testCompile 'junit:junit:[4.0,)'
