--- a/raven/src/main/webapp/WEB-INF/web.xml
+++ b/raven/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,10 @@
             <param-value>ca.nrc.cadc.vosi.CapInitAction</param-value>
         </init-param>
         <init-param>
+            <param-name>head</param-name>
+            <param-value>ca.nrc.cadc.vosi.CapHeadAction</param-value>
+        </init-param>
+        <init-param>
             <param-name>get</param-name>
             <param-value>ca.nrc.cadc.vosi.CapGetAction</param-value>
         </init-param>
