CADC-9998 Change raven config to set priorities by namespace

--- a/raven/src/test/resources/testValidConfig/raven.properties
+++ b/raven/src/test/resources/testValidConfig/raven.properties
@@ -8,12 +8,16 @@ org.opencadc.raven.privateKeyFile=raven-priv.key
 org.opencadc.raven.readGrantProvider=ivo://cadc.nrc.ca/baldur
 org.opencadc.raven.writeGrantProvider=ivo://cadc.nrc.ca/baldur
 
-org.opencadc.raven.putPreference=@UVIC
-@UVIC.resourceID=ivo://cadc.nrc.ca/uvic/minoc
-@UVIC.namespaces=cadc:CHIMEFRB/
-
-org.opencadc.raven.putPreference=@CADC
-@CADC.resourceID=ivo://cadc.nrc.ca/cadc/minoc
-@CADC.namespaces=mast:HST/ cadc:GEMINI/ gemini:GEMINI/ cadc:NEOSSAT/
-
 org.opencadc.raven.authenticateOnly=true
+
+org.opencadc.raven.putPreference=@SITE1
+@SITE1.resourceID=ivo://negotiation-test-site1
+@SITE1.namespaces=cadc:TEST/
+
+org.opencadc.raven.putPreference=@SITE2
+@SITE2.resourceID=ivo://negotiation-test-site2
+@SITE2.namespaces=cadc:INT-TEST/
+
+org.opencadc.raven.putPreference=@SITE3
+@SITE3.resourceID=ivo://negotiation-test-site3
+@SITE3.namespaces=foo:BAR/ cadc:TEST/
