CADC-9998 code review rework

--- a/raven/src/test/resources/testValidConfig/raven.properties
+++ b/raven/src/test/resources/testValidConfig/raven.properties
@@ -12,12 +12,13 @@ org.opencadc.raven.authenticateOnly=true
 
 org.opencadc.raven.putPreference=@SITE1
 @SITE1.resourceID=ivo://negotiation-test-site1
-@SITE1.namespaces=cadc:TEST/
+@SITE1.namespace=cadc:TEST/
 
 org.opencadc.raven.putPreference=@SITE2
 @SITE2.resourceID=ivo://negotiation-test-site2
-@SITE2.namespaces=cadc:INT-TEST/
+@SITE2.namespace=cadc:INT-TEST/
 
 org.opencadc.raven.putPreference=@SITE3
 @SITE3.resourceID=ivo://negotiation-test-site3
-@SITE3.namespaces=foo:BAR/ cadc:TEST/
+@SITE3.namespace=foo:BAR/
+@SITE3.namespace=cadc:TEST/
