--- a/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
+++ b/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
@@ -11,14 +11,13 @@ org.opencadc.raven.putPreference=@SFU
 
 org.opencadc.raven.putPreference=@UVIC
 @UVIC.resourceID=
-@UVIC.namespaces=
+@UVIC.namespace=
 
 org.opencadc.raven.putPreference=@USASK
 @USASK.resourceID=:
-@USASK.namespaces=cadc:CFHT/
+@USASK.namespace=cadc:CFHT/
 
 org.opencadc.raven.putPreference=@CADC
 @CADC.resourceID=ivo://cadc.nrc.ca/cadc/minoc
 @CADC.resourceID=ivo://cadc.nrc.ca/sfu/minoc
-@CADC.namespaces=mast:HST/ cadc:GEMINI/ gemini:GEMINI/ cadc:NEOSSAT/
-@CADC.namespaces=cadc:CFHT/
+@CADC.namespace=mast:HST/ cadc:GEMINI/
