CADC-9998 code review rework, added Namespace class, use comparator to prioritize StorageSite set

--- a/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
+++ b/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
@@ -8,16 +8,23 @@ org.opencadc.raven.privateKeyFile=raven-priv.key
 # invalid storage site rules
 
 org.opencadc.raven.putPreference=@SFU
+# missing resourceID
+# missing namespace
 
 org.opencadc.raven.putPreference=@UVIC
+# empty resourceID
 @UVIC.resourceID=
+# empty namespace
 @UVIC.namespace=
 
 org.opencadc.raven.putPreference=@USASK
+# resourceID: invalid rui
 @USASK.resourceID=:
 @USASK.namespace=cadc:CFHT/
 
 org.opencadc.raven.putPreference=@CADC
+# resourceID: found multiple properties
 @CADC.resourceID=ivo://cadc.nrc.ca/cadc/minoc
 @CADC.resourceID=ivo://cadc.nrc.ca/sfu/minoc
+# invalid namespace, whitespace not allowed
 @CADC.namespace=mast:HST/ cadc:GEMINI/
