cadc-10429 remove http from schemas, try it button only shows in GET endpoints

--- a/luskan/src/main/webapp/service.yaml
+++ b/luskan/src/main/webapp/service.yaml
@@ -4,7 +4,7 @@ info:
   title: storage metadata query service (luskan)
   description: A programatic interface for querying the file metadata of the storage inventory system. The service uses the IVOA Table Access Protocol (TAP)
 schemes:
-  - http
+  - https
 basePath: /luskan
 paths:
   /async:
